Fix high contrast in Network tools panel Add force color styles to fix high contrast on Network panel. This is a new Network branch based off of Sources patch.

--- a/front_end/ui/inspectorSyntaxHighlight.css
+++ b/front_end/ui/inspectorSyntaxHighlight.css
@@ -166,3 +166,9 @@
 .cm-link {color: #00c;}
 
 .cm-error {color: #f00;}
+
+@media (forced-colors: active) {
+    .devtools-link {
+        color: LinkText;
+    }
+}
